# doc2pdf

./: README.md  doc2pdf.py  pyproject.toml
doc2pdf/: __main__.py  cli.py  core.py
